# tactile-magnetic-sensors

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/controller/: CMakeLists.txt
src/controller/app/scripts/: read_magnetic_tactile_sensors_controller.xml
src/controller/conf/: config.ini
src/controller/include/: Controller.h  FingerController.h
src/controller/src/: Controller.cpp  FingerController.cpp  main.cpp
src/controller/thrift/: tactile_magnetic_sensor_controller.thrift
src/driver/: CMakeLists.txt
src/driver/include/: skinSensor.h  socketcan.h  taxel.h
src/driver/src/: skinSensor.cpp  socketcan.cpp  taxel.cpp
src/logger/: CMakeLists.txt
src/logger/app/scripts/: log_magnetic_tactile_sensors.xml
src/logger/conf/: config.ini
src/logger/include/: Logger.h
src/logger/src/: Logger.cpp  main.cpp  plot_cartesian.py  plot_tactile.py  plot_tactile_icub.py
src/logger/thrift/: logger.thrift
src/module/: CMakeLists.txt
src/module/app/scripts/: read_magnetic_tactile_sensors.xml
src/module/conf/: config.ini
src/module/include/: ReadingModule.h
src/module/src/: ReadingModule.cpp  main.cpp  skin_test.cpp
src/module/thrift/: tactile_magnetic_sensor_module.thrift
